--- a/res/layout/activity_call_jiney_home.xml
+++ b/res/layout/activity_call_jiney_home.xml
@@ -7,17 +7,14 @@
         android:id="@+id/notent_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
-
-        <ImageView
-            android:id="@+id/img_home_background_"
+        
+          <android.support.v4.view.ViewPager
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/home_pager_tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/genie" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+            android:layout_height="match_parent" >
+        </android.support.v4.view.ViewPager>
+        
     </FrameLayout>
     <!-- Navigaiton Drawer -->
 
