--- a/res/layout/fragment_repair_maintenance.xml
+++ b/res/layout/fragment_repair_maintenance.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+   <!--  <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="RepairMaintenance" />
+        android:text="RepairMaintenance" /> -->
 
 </LinearLayout>
